edit transaction changes

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -81,6 +81,7 @@
           [selectedOptions]="selectedOptions"
           [transactionTypeText]="transactionTypeText"
           [transactionType]="transactionType"
+          [scheduleAction]="scheduleAction"
           (status)="onNotify($event)"
         >
         <!-- [editOrView]="editOrView" -->
