revert changes previous button transaction page

--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -355,9 +355,9 @@
     </div>
   </div>
 
-  <div>
+  <!-- <div>
     <button class="btn btn-previous btn-left" type="button" (click)="goToPreviousStep()">
       Previous
     </button>
-  </div>
+  </div> -->
 </div>
