routeData input for access trans table by direct route

--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -177,6 +177,7 @@
       <app-transactions-table
         *ngIf="isTransactionViewActive()"
         formType="{{ formType }}"
+        [routeData]="routeData"
         [reportId]="reportId"
         tableType="{{ transactionsView }}"
       >
@@ -184,6 +185,7 @@
       <app-transactions-table
         *ngIf="isRecycleBinViewActive()"
         formType="{{ formType }}"
+        [routeData]="routeData"
         [reportId]="reportId"
         tableType="{{ recycleBinView }}"
       >
