FNE-1183: Adding padding left=0 so that row shading goes all the way to the left

--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <ul class="options-list">
-          <li class="options-list__item" *ngFor="let committeeReportType of committeeReportTypes; let i = index">
+          <li class="options-list__item pl-0" *ngFor="let committeeReportType of committeeReportTypes; let i = index">
             <input
               type="radio"
               name="reportTypeRadio"
