--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -2,6 +2,14 @@
   <ngb-highlight [result]="formatTypeaheadItem(r)" [term]="t"></ngb-highlight>
 </ng-template>
 
+<ng-template #rtOrg let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadOrgItem(r)" [term]="t"></ngb-highlight>
+</ng-template>
+
+<ng-template #rtCommitteeId let-r="result" let-t="term">
+  <ngb-highlight [result]="formatTypeaheadCommitteeId(r)" [term]="t"></ngb-highlight>
+</ng-template>
+
 <div class="individual-receipt-container">
   <form [formGroup]="frmIndividualReceipt">
     <header>
@@ -73,17 +81,19 @@
                     <!-- [attr.readonly]="isReadOnly(col?.name, col.type)" -->
                     <input
                       *ngIf="col?.name !== 'first_name' 
-                          && col?.name !== 'last_name'"
+                          && col?.name !== 'last_name'
+                          && col?.name !== 'child*entity_name'
+                          && col?.name !== 'child*donor_cmte_id'"
                       class="form-control"
                       [style.width]="col?.width"
                       [style.height]="col?.height"
                       [attr.type]="col?.type"
                       [attr.name]="col?.name"                      
-                      [attr.readonly]="col?.name === 'contribution_aggregate' && col.type === 'text' ? true : null"
+                      [attr.readonly]="isFieldName(col?.name, 'contribution_aggregate') && col.type === 'text' ? true : null"
                       [attr.value]="col?.value"
-                      [maxlength]="col?.name === 'contribution_amount' ? col?.validation?.max + 5: col?.validation?.max"
+                      [maxlength]="isFieldName(col?.name, 'contribution_amount') ? col?.validation?.max + 5: col?.validation?.max"
                       [formControlName]="col?.name"
-                      (blur)="col?.name === 'contribution_amount' ? contributionAmountChange($event) : null"
+                      (blur)="isFieldName(col?.name, 'contribution_amount') ? contributionAmountChange($event, col?.name) : null"
                       [ngClass]="
                         frmIndividualReceipt.get(col?.name)?.invalid &&
                         (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
@@ -136,6 +146,50 @@
                       [inputFormatter]="formatterFirstName"
                       (selectItem)="handleSelectedItem($event)"
                     />
+                    <input
+                      *ngIf="col?.name === 'child*entity_name'"
+                      class="form-control"
+                      [style.width]="col?.width"
+                      [style.height]="col?.height"
+                      [attr.type]="col?.type"
+                      [attr.name]="col?.name"
+                      [attr.value]="col?.value"
+                      [maxlength]="col?.validation?.max"
+                      [formControlName]="col?.name"
+                      [ngClass]="
+                        frmIndividualReceipt.get(col?.name)?.invalid &&
+                        (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                          ? 'input-field-error'
+                          : ''
+                      "
+                      id="typeahead-template-org"
+                      [ngbTypeahead]="searchOrg"
+                      [resultTemplate]="rtOrg"
+                      [inputFormatter]="formatterOrgName"
+                      (selectItem)="handleSelectedEntityChildForm($event, col?.name)"
+                    />
+                    <input
+                      *ngIf="col?.name === 'child*donor_cmte_id'"
+                      class="form-control"
+                      [style.width]="col?.width"
+                      [style.height]="col?.height"
+                      [attr.type]="col?.type"
+                      [attr.name]="col?.name"
+                      [attr.value]="col?.value"
+                      [maxlength]="col?.validation?.max"
+                      [formControlName]="col?.name"
+                      [ngClass]="
+                        frmIndividualReceipt.get(col?.name)?.invalid &&
+                        (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                          ? 'input-field-error'
+                          : ''
+                      "
+                      id="typeahead-template-committee-id"
+                      [ngbTypeahead]="searchCommitteeId"
+                      [resultTemplate]="rtCommitteeId"
+                      [inputFormatter]="formatterCommitteeId"
+                      (selectItem)="handleSelectedEntityChildForm($event, col?.name)"
+                    />                  
                   </div>
                   <div
                     class="error-text"
@@ -189,7 +243,7 @@
                 </ng-container>
                 <ng-container *ngIf="col?.type === 'checkbox'">
                   <input
-                    class="form-control"
+                    class="form-control forms__big_checkbox"
                     [style.width]="col?.width"
                     [style.height]="col?.height"
                     [attr.type]="col?.type"
@@ -216,7 +270,8 @@
                     [formControlName]="col?.name"
                   ></textarea>
                 </ng-container>
-                <ng-container *ngIf="col?.type === 'select' && col?.name === 'state'">
+                <!-- <ng-container *ngIf="col?.type === 'select' && (col?.name === 'state' || col?.name === 'child*state')"> -->
+                <ng-container *ngIf="col?.type === 'select' && isFieldName(col?.name, 'state')">  
                   <ng-select
                     (change)="handleStateChange($event, col)"
                     class="state-select"
@@ -246,6 +301,20 @@
             </div>
           </div>
         </ng-container>
+
+        <ng-container *ngIf="row.childForm">
+          <div class="row">
+            <div [class]="row.childFormClass">
+              {{ row.childFormTitle }}
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-md-12">
+                <hr />
+              </div>
+            </div>
+        </ng-container>
+
       </ng-container>
     </section>
     <footer>
