change class name for child class div

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -304,7 +304,7 @@
 
         <ng-container *ngIf="row.childForm">
           <div class="row">
-            <div [class]="row.childFormClass">
+            <div [class]="row.colClassName">
               {{ row.childFormTitle }}
             </div>
           </div>
